fix: horizontal scroll

--- a/shelter/main/main.scss
+++ b/shelter/main/main.scss
@@ -639,7 +639,7 @@ MEDIA REQUESTS:
         top: -1.5px;
         padding: 23px 19px;
       }
-      @media (max-width: 700px) {
+      @media (max-width: 720px) {
         justify-content: center;
         gap: 0;
         width: 90%;
